--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,9 +49,7 @@ ul, ol {
 }
 
 nav > * {
-  margin-right: 1em;
-
-  &:first-child {
-    margin-left: 1em;
-  }
+  white-space: nowrap;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
 }
